kubernetes/apps/code-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: code-server
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    external-dns/is-public: true
    external-dns.alpha.kubernetes.io/target: "asgard.eighty-three.me"
spec:
  tls:
    - secretName: code-eighty-three-me-tls
      hosts:
        - code.eighty-three.me
  rules:
  - host: code.eighty-three.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-server
            port:
              number: 8443
